--- a/mc/guess-the-number/index.html
+++ b/mc/guess-the-number/index.html
@@ -15,8 +15,12 @@
         <p>Enter a guess between 0 to 100</p>
         <input id="input" type="number" placeholder="Enter a number" />
         <div>
-          <button id="submit" type="button" class="btn btn-primary">Submit</button>
-          <button id="startGame" type="button" class="btn btn-primary" disabled>Start Game</button>
+          <button id="submit" type="button" class="btn btn-primary">
+            Submit
+          </button>
+          <button id="startGame" type="button" class="btn btn-primary" disabled>
+            Start Game
+          </button>
 
           <p><output id="output"></output></p>
           <p><output id="guessDisplay"></output></p>
