--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="container text-center">
       <h1>
         Frontend Mini Challenges
-        <a href="https://github.com/sadanandpai/frontend-mini-challenges/"
-          ><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="github repo"
+        <a href="https://github.com/bgoonz/mini-vanilla-projects/"
+          ><img
+            src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+            alt="github repo"
         /></a>
       </h1>
       <main class="grid challenge-grid" id="challengeGrid"></main>
