--- a/mc/chips-input/index.html
+++ b/mc/chips-input/index.html
@@ -13,7 +13,12 @@
       <h1 class="title">Chips Input</h1>
 
       <form>
-        <input type="text" id="userInput" autocomplete="off" placeholder="Type & hit Enter" />
+        <input
+          type="text"
+          id="userInput"
+          autocomplete="off"
+          placeholder="Type & hit Enter"
+        />
       </form>
 
       <div class="chips-display"></div>
