--- a/mc/light-dark-mode/index.html
+++ b/mc/light-dark-mode/index.html
@@ -13,7 +13,9 @@
     <input type="checkbox" id="themeSwitch" />
 
     <div class="container">
-      <h1>The entire page color theme is controlled using CSS and JavaScript</h1>
+      <h1>
+        The entire page color theme is controlled using CSS and JavaScript
+      </h1>
 
       Contained dark mode:
       <input type="checkbox" id="innnerThemeSwitch" />
