--- a/mc/todo-list/index.html
+++ b/mc/todo-list/index.html
@@ -13,7 +13,12 @@
       <h1 class="title">Todo List</h1>
 
       <form id="todoForm">
-        <input type="text" id="todoItemInput" autocomplete="off" placeholder="item" />
+        <input
+          type="text"
+          id="todoItemInput"
+          autocomplete="off"
+          placeholder="item"
+        />
       </form>
 
       <div id="listContainer" class="list-container"></div>
